View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022761 | Open CASCADE | OCCT:Modeling Data | public | 2011-10-14 09:46 | 2012-03-29 17:26 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | crash | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.5.2 | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0022761: Exception in ModelingData in debug mode | ||||
Description | Exception is raised when trying to load attached shape | ||||
Steps To Reproduce | restore TransmissionTestModel5-notfixed.brep a result: An exception was caught 00556CAC : Standard_NumericError: FLT INVALID OPERATION ** Exception ** 00556CAC : Standard_NumericError: FLT INVALID OPERATION | ||||
Tags | No tags attached. | ||||
Test case number | chl 934 D6 | ||||
2011-10-14 09:46 developer |
TransmissionTestModel5-notfixed.brep (2,721,227 bytes) |
|
SVN branch http://svn/svn/occt/branches/OCC22761 is ready to be reviewed |
|
Reviewed with no comments. Note that creation of test case for this bug is practically impossible, as behaviour depends on layout of uninitialized data (that is why it occurred in Debug mode only). |
2011-10-17 20:55 tester |
chl_934_D6.tar.gz (575 bytes) |
|
Dear BugMaster, Workbench KAS:dev:mkv-OCC22761-occt was created from SVN branch http://svn/svn/occt/branches/OCC22761 (and mkv-OCC22761-products from trunk) and compiled on Linux platform. Test case for this bug is chl/934/D6. It is OK for debug and optimise modes. There are not regressions in mkv-OCC22761-products regarding to KAS:dev:products-652-opt. See results in /dn45/occttests/results/KAS/dev/mkv-OCC22761-products_14102011/lin See reference results in /dn45/occttests/results/KAS/dev/products-652-opt_23092011/lin See test cases in /dn45/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification N.B.Also test case chl/934/D6 also is OK in KAS:dev:products-652-deb. |
|
As I wrote, having test case for this problem makes no sense, as behavior depends on memory layout |
|
Integrated into trunk of occt repository Date: 2011-10-21 21:31:28 +0400 (Fri, 21 Oct 2011) New Revision: 9232 Modified: trunk/src/BRepTools/BRepTools.cxx |
Date Modified | Username | Field | Change |
---|---|---|---|
2011-10-14 09:46 |
|
New Issue | |
2011-10-14 09:46 |
|
Assigned To | => jgv |
2011-10-14 09:46 |
|
File Added: TransmissionTestModel5-notfixed.brep | |
2011-10-14 10:53 |
|
Assigned To | jgv => abv |
2011-10-14 10:55 |
|
Note Added: 0018359 | |
2011-10-14 11:07 |
|
Status | new => assigned |
2011-10-14 11:09 |
|
Note Added: 0018360 | |
2011-10-14 11:09 |
|
Status | assigned => reviewed |
2011-10-14 11:34 |
|
Product Version | => 6.5.2 |
2011-10-14 11:34 |
|
Target Version | => 6.5.3 |
2011-10-17 20:55 |
|
File Added: chl_934_D6.tar.gz | |
2011-10-17 20:55 |
|
Note Added: 0018369 | |
2011-10-17 20:56 |
|
Test case number | => chl 934 D6 |
2011-10-17 20:56 |
|
Status | reviewed => tested |
2011-10-17 21:04 |
|
Note Added: 0018370 | |
2011-10-21 21:32 | bugmaster | Note Added: 0018398 | |
2011-10-21 21:32 | bugmaster | Status | tested => verified |
2011-10-21 21:32 | bugmaster | Resolution | open => fixed |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master c55993db |