0022761: Exception in ModelingData in debug mode